[package]
name = "bbvk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noir_rs = { git = "https://github.com/rarimo/noir_rs.git", branch = "v1.0.3", features = ["barretenberg"] }
hex = "0.4.3"
clap = { version = "4.5.36", features = ["derive"] }
